1999-01-22  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : better doc

1999-01-15  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : doc update 

1999-01-11  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm: first version
	
